Implement city weather list feature

--- a/app/src/main/res/layout/activity_weather_list.xml
+++ b/app/src/main/res/layout/activity_weather_list.xml
@@ -5,19 +5,23 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".feature.weatherlist.WeatherListActivity">
+        tools:context=".feature.weatherlist.WeatherListActivity"
+>
 
     <com.google.android.material.appbar.AppBarLayout
-            android:layout_height="wrap_content"
             android:layout_width="match_parent"
-            android:theme="@style/AppTheme.AppBarOverlay">
+            android:layout_height="wrap_content"
+            android:theme="@style/AppTheme.AppBarOverlay"
+            android:background="@android:color/transparent"
+    >
 
         <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                android:background="?attr/colorPrimary"
-                app:popupTheme="@style/AppTheme.PopupOverlay"/>
+                app:titleTextColor="@color/material_color_black_87_percent"
+                app:popupTheme="@style/AppTheme.PopupOverlay"
+        />
 
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -29,6 +33,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
             android:layout_margin="@dimen/fab_margin"
-            app:srcCompat="@android:drawable/ic_dialog_email"/>
+            app:srcCompat="@drawable/ic_refresh"
+    />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
