--- a/app/src/main/res/layout/item_city_weather.xml
+++ b/app/src/main/res/layout/item_city_weather.xml
@@ -49,6 +49,8 @@
         android:layout_height="0dp"
         android:layout_marginEnd="8dp"
         android:layout_marginTop="8dp"
+        android:background="@drawable/bg_rounded_shape_white"
+        android:padding="2dp"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
