--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,10 +3,10 @@
   <!-- Base application theme. -->
   <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
     <!-- Customize your theme here. -->
-    <item name="colorPrimary">@color/colorPrimary</item>
-    <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+    <item name="colorPrimary">@color/material_color_grey_600</item>
+    <item name="colorPrimaryDark">@color/material_color_black_87_percent</item>
     <item name="colorAccent">@color/colorAccent</item>
-    <item name="android:windowBackground">@drawable/bg_gradient</item>
+    <item name="android:windowBackground">@color/material_color_grey_600</item>
   </style>
 
   <style name="AppTheme.NoActionBar">
