--- a/app/src/main/res/layout/content_weather_detail.xml
+++ b/app/src/main/res/layout/content_weather_detail.xml
@@ -42,7 +42,9 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginEnd="8dp"
+      android:drawablePadding="4dp"
       android:drawableStart="@drawable/ic_arrow_upward"
+      android:minWidth="30dp"
       android:textColor="@color/material_color_white"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toTopOf="@+id/textView3"
@@ -53,13 +55,14 @@
       android:id="@+id/lowestTemperatureTextView"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_marginEnd="8dp"
       android:layout_marginTop="8dp"
+      android:drawablePadding="4dp"
       android:drawableStart="@drawable/ic_arrow_downward"
+      android:minWidth="20dp"
       android:textColor="@color/material_color_white"
-      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="@+id/highestTemperatureTextView"
       app:layout_constraintTop_toBottomOf="@+id/highestTemperatureTextView"
-      tools:text="100 °"
+      tools:text="-0°"
       style="@style/MaterialTypography.Regular.Caption"
       />
   <androidx.appcompat.widget.AppCompatTextView
